# rqt_kuka

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
perspective/: kuka.perspective  kuka2.perspective
resource/: RqtKuka.ui  RqtKuka.ui.backup  RqtKuka.ui.backup.ui  RqtKuka.ui.sinalertas.ui
rviz/: config1.rviz
scripts/: readme  reboot.sh  robotnik.desktop  robotnik_kuka.sh  rqt_kuka.py
src/rqt_kuka/: obuses_poses.py  robotnik_rqt_kuka_node.py
v-rep/: README
v-rep/model/: KUKA KR120 R2500.ttm
